Color: handle pre-multiplied alpha correctly

Without this change, we're doing color transforms on
the multiplied-in alpha values, which is wrong.

Bug: 835322
Cq-Include-Trybots: luci.chromium.try:android_optional_gpu_tests_rel
Change-Id: I30a9533837f8d6392394eab9d859968cec93e4da
Reviewed-on: https://chromium-review.googlesource.com/1036618
Reviewed-by: Fredrik Hubinette <hubbe@chromium.org>
Reviewed-by: ccameron <ccameron@chromium.org>
Commit-Queue: Fredrik Hubinette <hubbe@chromium.org>
Cr-Commit-Position: refs/heads/master@{#555226}
Former-commit-id: ed480969eb31afdfdad0cf3d42206b3a3314077e